# aw-goal-tracker

./: README.md  pyproject.toml
goaltracker/: Goal.py  GoalTrackerDb.py  __main__.py  awfetcher.py
goaltracker/ui/: CircularProgress.py  FilterConfiguration.py  GoalTrackerMainWindow.py
